[gd_scene load_steps=7 format=3 uid="uid://cl1cwu2oqf1nw"]

[ext_resource type="Script" path="res://Content/Inside/orb.gd" id="1_a3hmm"]
[ext_resource type="Texture2D" uid="uid://duvct07xo1lym" path="res://icon.svg" id="2_e84fu"]

[sub_resource type="Animation" id="Animation_4kul5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Panel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1080)]
}

[sub_resource type="Animation" id="Animation_i3p2i"]
resource_name = "reveal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.659754, 0.659754),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Panel:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.420448, 0.42),
"update": 0,
"values": [Vector2(0, 1080), Vector2(0, 890)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_avyp5"]
_data = {
"RESET": SubResource("Animation_4kul5"),
"reveal": SubResource("Animation_i3p2i")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_jy6bk"]
size = Vector3(3, 1, 3)

[node name="Orb" type="Node3D"]
script = ExtResource("1_a3hmm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_avyp5")
}

[node name="InteractionArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
shape = SubResource("BoxShape3D_jy6bk")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = -1
anchor_top = 0.824074
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1080.0
offset_right = 28800.0
offset_bottom = 3930.0
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Panel/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]Welcome, young wizard,
(Tervitused, noor võlur,)

I know you find yourself somewhat... astray,
(Ma tean, et oled pisut... eksinud,)

but worry not, for I am here to guide you before I depart.
(kuid ära põe, olen siin sind aitamaks enne oma lahkumist)

I have set my years upon the defense of this tower.
(Olen oma eluaastad pühendanud selle torni kaitsesse.)

Now, my time has come to pass on this duty.
(Nüüd on saabunud aeg anda see kohustus edasi.)

What lies within this tower is beyond my knowledge,
(Siin tornis peituv on mulle arusaamatu,)

but I know that whatever it is, if it were to fall into the wrong hands...
(kuid tean, et hoolimata sellest, mis see on, kui see satuks valedesse kätesse...)

...the consequences would be beyond imagination...
(...oleksid tagajärjed mõeldamatud...)"
scroll_active = false

[node name="Sprite3D" type="Sprite3D" parent="."]
sorting_offset = 0.065
billboard = 1
no_depth_test = true
render_priority = 10
texture = ExtResource("2_e84fu")

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
